# worm

./: README.md  index.html
c++/: CMakeLists.txt  brain.cc  brain.h  cave.cc  cave.h  computils.cc  computils.h  drawable.h  entity.h  gfx.cc  gfx.h  main.cc  neuron.cc  neuron.h  powerhouse.cc  powerhouse.h  worm.cc  worm.h
js/: brain.js  cave.js  cfg.js  main.js  neuron.js  powerhouse.js  worm.js
